SDKs/twilio.com/twilio_sync_v1/1.37.4/java/README.md
# openapisdk

<!-- Start SDK Installation -->
## SDK Installation

### Gradle

```groovy
implementation 'openapisdk:openapisdk:0.0.1'
```
<!-- End SDK Installation -->

## SDK Example Usage
<!-- Start SDK Example Usage -->
```java
package hello.world;

import openapisdk.SDK;
import openapisdk.models.shared.Security;

public class Application {
    public static void main(String[] args) {
        try {
            SDK.Builder builder = SDK.builder();

            SDK sdk = builder.build();

            CreateDocumentRequest req = new CreateDocumentRequest() {{
                security = new CreateDocumentSecurity() {{
                    accountSidAuthToken = new SchemeAccountSidAuthToken() {{
                        password = "YOUR_PASSWORD_HERE";
                        username = "YOUR_USERNAME_HERE";
                    }};
                }};
                pathParams = new CreateDocumentPathParams() {{
                    serviceSid = "sit";
                }};
                request = new CreateDocumentCreateDocumentRequest() {{
                    data = "voluptas";
                    ttl = 6050128673802995827;
                    uniqueName = "expedita";
                }};
            }};

            CreateDocumentResponse res = sdk.createDocument(req);

            if (res.syncV1ServiceDocument.isPresent()) {
                // handle response
            }
        } catch (Exception e) {
            // handle exception
        }
```
<!-- End SDK Example Usage -->

<!-- Start SDK Available Operations -->
## SDK Available Operations

### SDK SDK

* `createDocument`
* `createService`
* `createStreamMessage` - Create a new Stream Message.
* `createSyncList`
* `createSyncListItem`
* `createSyncMap`
* `createSyncMapItem`
* `createSyncStream` - Create a new Stream.
* `deleteDocument`
* `deleteDocumentPermission` - Delete a specific Sync Document Permission.
* `deleteService`
* `deleteSyncList`
* `deleteSyncListItem`
* `deleteSyncListPermission` - Delete a specific Sync List Permission.
* `deleteSyncMap`
* `deleteSyncMapItem`
* `deleteSyncMapPermission` - Delete a specific Sync Map Permission.
* `deleteSyncStream` - Delete a specific Stream.
* `fetchDocument`
* `fetchDocumentPermission` - Fetch a specific Sync Document Permission.
* `fetchService`
* `fetchSyncList`
* `fetchSyncListItem`
* `fetchSyncListPermission` - Fetch a specific Sync List Permission.
* `fetchSyncMap`
* `fetchSyncMapItem`
* `fetchSyncMapPermission` - Fetch a specific Sync Map Permission.
* `fetchSyncStream` - Fetch a specific Stream.
* `listDocument`
* `listDocumentPermission` - Retrieve a list of all Permissions applying to a Sync Document.
* `listService`
* `listSyncList`
* `listSyncListItem`
* `listSyncListPermission` - Retrieve a list of all Permissions applying to a Sync List.
* `listSyncMap`
* `listSyncMapItem`
* `listSyncMapPermission` - Retrieve a list of all Permissions applying to a Sync Map.
* `listSyncStream` - Retrieve a list of all Streams in a Service Instance.
* `updateDocument`
* `updateDocumentPermission` - Update an identity's access to a specific Sync Document.
* `updateService`
* `updateSyncList`
* `updateSyncListItem`
* `updateSyncListPermission` - Update an identity's access to a specific Sync List.
* `updateSyncMap`
* `updateSyncMapItem`
* `updateSyncMapPermission` - Update an identity's access to a specific Sync Map.
* `updateSyncStream` - Update a specific Stream.

<!-- End SDK Available Operations -->

### SDK Generated by [Speakeasy](https://docs.speakeasyapi.dev/docs/using-speakeasy/client-sdks)
